typescript/checker/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithOneOperandIsAny.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            465,
        ),
        hi: BytePos(
            466,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithOneOperandIsAny.ts:25:5
   |
25 | var a: boolean;
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            481,
        ),
        hi: BytePos(
            482,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithOneOperandIsAny.ts:26:5
   |
26 | var b: number;
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            496,
        ),
        hi: BytePos(
            497,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithOneOperandIsAny.ts:27:5
   |
27 | var c: string;
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            511,
        ),
        hi: BytePos(
            512,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithOneOperandIsAny.ts:28:5
   |
28 | var d: void;
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            524,
        ),
        hi: BytePos(
            525,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithOneOperandIsAny.ts:29:5
   |
29 | var e: E;
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            534,
        ),
        hi: BytePos(
            535,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithOneOperandIsAny.ts:30:5
   |
30 | var f: {};
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            545,
        ),
        hi: BytePos(
            546,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithOneOperandIsAny.ts:31:5
   |
31 | var g: string[];
   |     ^

